#275: spotless fixes